--- a/style.css
+++ b/style.css
@@ -258,7 +258,7 @@ ul li input {
     height: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     margin: 20px auto;
     gap: 10px;
 }
