--- a/style.css
+++ b/style.css
@@ -333,7 +333,7 @@ ul li input {
     height: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     margin: 30px 25px;
     gap: 20px;
 }
